@@ -60,9 +60,6 @@
 
 #define REDIR_MAXCONN                     16
 
-#define REDIR_CHALLENGETIMEOUT1          300 /* Seconds */
-#define REDIR_CHALLENGETIMEOUT2          600 /* Seconds */
-
 #define REDIR_URL_LEN                   2048
 #define REDIR_SESSIONID_LEN               17
 
